--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -18,6 +18,11 @@ body {
 
 #buttons {
     text-align: center;
+    position: absolute;
+    top: 0;
+    left: 25%;
+    right: 25%;
+    z-index: 10000;
 }
 
 .button {
@@ -32,23 +37,4 @@ body {
     background: #ee8a65;
     font-family: sans-serif;
     font-weight: bold;
-}
-
-.filter-ctrl {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    z-index: 1;
-}
-
-.filter-ctrl input[type='text'] {
-    font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
-    border: 0;
-    background-color: #fff;
-    margin: 0;
-    color: rgba(0, 0, 0, 0.5);
-    padding: 10px;
-    box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
-    border-radius: 3px;
-    width: 180px;
 }
